Finally got the form to change to red if field is blank

--- a/exercises/07-Form-Validation/css/main.css
+++ b/exercises/07-Form-Validation/css/main.css
@@ -355,6 +355,10 @@ input {
   color: #555;
 }
 
+.error {
+  border: #ff0000 2px solid;
+}
+
 /* ==========================================================================
    #SELECT2
    ========================================================================== */
