--- a/exercises/07-Form-Validation/css/main.css
+++ b/exercises/07-Form-Validation/css/main.css
@@ -369,10 +369,6 @@ input {
   color: #555;
 }
 
-.error {
-  border: #ff0000 2px solid;
-}
-
 /* ==========================================================================
    #SELECT2
    ========================================================================== */
@@ -512,7 +508,11 @@ input {
   }
 }
 
+/* Additional CSS */
 
+.error {
+  border: #ff0000 2px solid;
+}
 
 .box, .completed-form {
   display: none;
