--- a/exercises/WeatherApp/index.css
+++ b/exercises/WeatherApp/index.css
@@ -13,7 +13,7 @@ html {
 
 body {
   align-items: center;
-
+  background-color: #282c34;
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -23,22 +23,74 @@ body {
 h1 {
   color: #fdfdfd;
   font-family: Pacifico;
-  font-size: 4em;
+  font-size: 2em;
   font-weight: normal;
   line-height: 1em;
   margin: 0;
   text-shadow: 0.25rem 0.25rem 0 rgba(#000000, 0.75);
 }
 
+h3 {
+  
+  color: #fdfdfd;
+  font-size: 1.2em;
+  font-weight: normal;
+  line-height: 1.2em;
+  margin: 0;
+  text-shadow: 0.25rem 0.25rem 0 rgba(#000000, 0.75);
+}
+
+h4 {
+  
+  color: #fdfdfd;
+  font-size: 1.5em;
+  font-weight: normal;
+  line-height: 1em;
+  margin: 0;
+  text-shadow: 0.25rem 0.25rem 0 rgba(#000000, 0.75);
+}
+
+h5 {
+  padding: 5px 0;
+  color: #fdfdfd;
+  font-size: .4em;
+  font-weight: normal;
+  line-height: 1em;
+  margin: 0;
+  text-shadow: 0.25rem 0.25rem 0 rgba(#000000, 0.75);
+
+}
+
 #main {
-  background: rgba(0, 51, 102, 0.5);
+  /* background: rgba(0, 51, 102, 0.5); */
   margin: 0 auto;
   max-width: 100%;
   padding: 1.5em 2em 0.5em;
   text-align: center;
-  box-shadow: 0.25em 0.25em 0 black;
-  border: 0.25em solid white;
-  border-radius: 0.5rem;
+  
+  
+}
+
+.region-container {
+  margin-top: 10px;
+  font-family: Pacifico;
+  font-size: 2.2em;
+  font-weight: normal;
+  line-height: 1em;
+  color: #fdfdfd;
+
+}
+
+.sarcasm-container {
+  margin-top: 40px;
+  width: 60vw;
+  color: rgb(40, 40, 40)
+}
+
+#weather-icons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #quick-view {
@@ -72,9 +124,17 @@ h1 {
 }
 
 button {
+  width: 100px;
+  height: 30px;
+  margin: 15px 5px 0 5px;
   bottom: 0;
-  background-color: rgba(250, 250, 255, 0.4);
+  background-color: rgb(225, 225, 225);
   border: none;
-  padding: 1em;
+  border-radius: .6rem;
   right: 0;
+}
+
+button:hover {
+  background-color: rgb(188, 188, 188);
+  transition: 500ms;
 }
